--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
   <head>
+    <p>Nope!</p>
     <script>
-      function nope() {
-        document.write('Nope.');
-      }
-      hello();
+      alert('Moon day')
     </script>
   </head>
 </html>
